[package]
authors = ["Pascal Hartig <phartig@rdrei.net>"]
name = "revmenu"
description = "Check out git and mercurial revisions from your terminal output"
repository = "https://github.com/passy/revmenu"
license = "MIT"
version = "0.1.1"
keywords = ["terminal", "git", "mercurial"]
categories = ["command-line-interface"]
readme = "README.md"

[features]
unstable = ["clippy"]

[dependencies]
clippy = { version = "0.0.*", optional = true }
clap = "2.29.4"
console = "0.6.1"
exitcode = "1.1.2"
failure = "0.1.1"
nom = "4.0.0-beta2"
itertools = "0.7.7"
colored = "1.6.0"
im = "9.0.0"

[badges]
travis-ci = { repository = "passy/revmenu" }
