[package]
authors = ["Pascal Hartig <phartig@rdrei.net>"]
name = "revmenu"
description = "Check out git and mercurial revisions from your terminal output"
repository = "https://github.com/passy/revmenu"
license = "MIT"
version = "0.1.2"
keywords = ["terminal", "git", "mercurial"]
categories = ["command-line-interface"]
readme = "README.md"
edition = "2018"

[features]
unstable = ["clippy"]

[dependencies]
clippy = { version = "0.0.*", optional = true }
clap = "2.29.4"
console = "0.6.1"
exitcode = "1.1.2"
failure = "0.1.1"
nom = "4.1.1"
itertools = "0.7.7"
colored = "1.6.1"
im = "10.2.0"
human-panic = "1.0.1"

[badges]
travis-ci = { repository = "passy/revmenu" }
